[package]
name = "ensenas-service"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
tokio = { version = "1.45.1", features = ["full"] }
actix-cors = "0.7.1"
log = "0.4.27"
env_logger = "0.11.8"
firebase-auth = { version = "0.5.0", features = ["actix-web"] }
