[package]
name = "ensenas-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
dotenvy = "0.15.7"
actix-web = "4.11.0"
entity = { path = "entity"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46.0", features = ["full"] }
actix-cors = "0.7.1"
log = "0.4.27"
env_logger = "0.11.8"
firebase-auth = { version = "0.5.1", features = ["actix-web"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
